Fixed alignment issue in Search component

--- a/components/Search/Search.module.scss
+++ b/components/Search/Search.module.scss
@@ -23,6 +23,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
 
   @include sm-breakpoint {
     width: 75%;
